--- a/renderer/src/pages/danmaku/app.css
+++ b/renderer/src/pages/danmaku/app.css
@@ -1,6 +1,7 @@
 html {
   scroll-behavior: smooth;
   height: 100%;
+  background-color: black;
 }
 
 body {
@@ -32,40 +33,4 @@ li {
 
 li:last-child {
   margin-bottom: 0;
-}
-
-.badge {
-  margin-right: 0.5em;
-}
-
-.badge-name {
-  padding: 0 0.2em;
-  color: white;
-  border-radius: 0.1em 0 0 0.1em;
-  border-style: solid;
-  border-width: 1px;
-}
-
-.badge-level {
-  padding: 0 0.2em;
-  background-color: white;
-  color: black;
-  border-radius: 0 0.1em 0.1em 0;
-  border-style: solid;
-  border-width: 1px;
-}
-
-.user-level {
-  padding: 0 0.2em;
-  background-color: white;
-  border-style: solid;
-  border-radius: 0.1em;
-  border-width: 1px;
-  margin-right: 0.5em;
-}
-
-.message {
-  overflow-wrap: anywhere;
-  word-wrap: break-all;
-  line-height: 1.5em;
 }
